add stories page

--- a/Home.html
+++ b/Home.html
@@ -16,13 +16,14 @@
             <i class="fa-regular fa-heart" id="heart"></i>
             <h3>MindWell</h3>
         </div>
+
         <div class="navOptions">
-            <h3>Home</h3>
-            <h3>About</h3>
-            <h3>Stories</h3>
-            <h3>Play Game</h3>
-            <h3>Quotes</h3>
-            <h3>Contact</h3>
+            <a href="Home.html">Home</a>
+            <a href="About.html">About</a>
+            <a href="Stories.html">Stories</a>
+            <a href="Health.html">Mental Health</a>
+            <a href="Quotes.html">Quotes</a>
+            <a href="Contact.html">Contact</a>
         </div>
         <button class="support">Support</button>
     </nav>
@@ -48,13 +49,13 @@
             <div class="cards">
                 <div class="safeSpace">
                     <i class="fa-solid fa-shield-heart"></i>
-                    <h3>Read Stories</h3>
-                    <p>Stories that inspire courage, resilience, and the power of determination—real or fictional, everyone can learn from them</p>
+                    <h3>Watch Stories</h3>
+                    <p>Mental health refers to a person’s emotional, psychological, and social well-being. It affects how we think, feel, and behave in daily life.</p>
                 </div>
 
                 <div class="community">
                     <i class="fa-solid fa-trophy"></i>
-                    <h3>Play Games</h3>
+                    <h3>Mental Health</h3>
                     <p>Test your mood, try mindfulness challenges, and track your daily mental health.</p>
                 </div>
 
