--- a/Contact.html
+++ b/Contact.html
@@ -10,6 +10,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
+     <nav id="navbar">
+        <div class="navIcon">
+            <i class="fa-regular fa-heart" id="heart"></i>
+            <h3>MindWell</h3>
+        </div>
+
+        <div class="navOptions">
+            <a href="Home.html">Home</a>
+            <a href="About.html">About</a>
+            <a href="stories.html">Stories</a>
+            <a href="Health.html">Mental Health</a>
+            <a href="Quotes.html">Quotes</a>
+            <a href="Contact.html">Contact</a>
+        </div>
+        <button class="support">Support</button>
+    </nav>
+
     <main>
     <div class="contact-container">
         <h1>Contact Our Clinic</h1>
