--- a/Quotes.html
+++ b/Quotes.html
@@ -3,12 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mental Health Motivation</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+  <title>Mental Health Motivation</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
   <link rel="stylesheet" href="Quotes.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
+  
+   <nav id="navbar">
+        <div class="navIcon">
+            <i class="fa-regular fa-heart" id="heart"></i>
+            <h3>MindWell</h3>
+        </div>
+
+        <div class="navOptions">
+            <a href="Home.html">Home</a>
+            <a href="About.html">About</a>
+            <a href="stories.html">Stories</a>
+            <a href="Health.html">Mental Health</a>
+            <a href="Quotes.html">Quotes</a>
+            <a href="Contact.html">Contact</a>
+        </div>
+        <button class="support">Support</button>
+    </nav>
+    
+
   <div class="container">
     <h1>🌿 Mental Health & Motivation 🌿</h1>
     <div class="quote-box">
